fix: fixed misaligned highlight for social icons

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2173,6 +2173,7 @@ ul.social-icons li a {
     color: #444;
     position: relative;
     z-index: 1;
+    align-content: center;
 }
 
 
